--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dateformat": "^3.0.3",
     "formik": "^2.1.4",
     "material-ui": "^0.20.2",
+    "mdbreact": "^4.27.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-alert": "^7.0.2",
