--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dateformat": "^3.0.3",
     "formik": "^2.1.4",
     "material-ui": "^0.20.2",
+    "mdbreact": "^4.27.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-alert": "^7.0.2",
@@ -27,6 +28,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-social-media-bar": "^0.0.4",
     "react-toastify": "^6.0.6",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
