Add stepper files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,13 @@
     "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.10.1",
     "@material-ui/pickers": "^3.2.10",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-react-buttons": "^4.0.0",
+    "@progress/kendo-react-form": "^4.0.0",
+    "@progress/kendo-react-intl": "^4.0.0",
+    "@progress/kendo-react-layout": "^4.0.0",
+    "@progress/kendo-react-progressbars": "^4.0.0",
+    "@progress/kendo-theme-material": "^3.21.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
