--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,7 +68,9 @@
   },
   "description": "The Digital Ability Support Network System (Dasuns) is to promote social and inclusive development through facilitating access to professional assistive support services and technologies to advance rights, choices ad opportunities for persons with disabilities.",
   "main": "/src/App.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-pwa-manifest": "^4.3.0"
+  },
   "keywords": [
     "DASUNS",
     "WEBAPP"
