--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
     "@date-io/date-fns": "1.x",
-    "@material-ui/core": "^4.10.1",
+    "@material-ui/core": "^4.11.2",
     "@material-ui/pickers": "^3.2.10",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-react-buttons": "^4.0.0",
@@ -31,6 +31,7 @@
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.3.0",
+    "react-context-devtool": "^2.0.0",
     "react-dom": "^16.13.1",
     "react-formik-ui": "^4.1.2",
     "react-hook-form": "^5.7.2",
